headerbar: selection-mode backdrop button border fix
Fix selection-mode backdrop button border to have the same invisible
borders that non-selection-mode buttons have.

--- a/gtk/src/light/gtk-3.20/_headerbar.scss
+++ b/gtk/src/light/gtk-3.20/_headerbar.scss
@@ -199,7 +199,7 @@ headerbar,
             @include button(backdrop, $suggested_bg_color, $selected_fg_color);
 
             -gtk-icon-effect: none;
-            border-color: $suggested_border_color;
+            border-color: $suggested_bg_color;
 
             &:active,
             &:checked {
